// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event components render correctly App renders correctly 1`] = `
<div>
  <div
    className="row"
  >
    <h1
      className="title"
    >
      Events &
      <br />
      Training
    </h1>
    <form
      className="row picker-wrap"
      onSubmit={[Function]}
    >
      <span
        className="text"
      >
        Search
        <br />
        by date
      </span>
      <div
        className="picker"
      >
        <input
          onChange={[Function]}
          placeholder="--"
          type="text"
          value="09"
        />
         /
        <input
          onChange={[Function]}
          placeholder="--"
          type="text"
          value="26"
        />
         /
        <input
          onChange={[Function]}
          placeholder="--"
          type="text"
          value="2017"
        />
      </div>
      <button
        className="btn btn-sm hollow"
      >
        Find events
      </button>
    </form>
  </div>
  <div
    className="calendar"
  >
    <div>
      <div
        className="calendar-control"
      >
        <div
          className="controls"
        >
          <a
            className="calendar-back"
            href="#"
            onClick={[Function]}
          />
          <span>
            September
          </span>
          <a
            className="calendar-forward"
            href="#"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="calendar-header"
      >
        <span>
          Sunday
        </span>
        <span>
          Monday
        </span>
        <span>
          Tuesday
        </span>
        <span>
          Wednesday
        </span>
        <span>
          Thursday
        </span>
        <span>
          Friday
        </span>
        <span>
          Saturday
        </span>
      </div>
      <div
        className="calendar-row"
      >
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            27
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            28
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            29
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            30
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            31
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            1
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            2
          </span>
          <div
            className="day-events"
          />
        </div>
      </div>
      <div
        className="calendar-row"
      >
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            3
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            4
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            5
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            6
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            7
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            8
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            9
          </span>
          <div
            className="day-events"
          />
        </div>
      </div>
      <div
        className="calendar-row"
      >
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            10
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            11
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            12
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            13
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            14
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            15
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            16
          </span>
          <div
            className="day-events"
          />
        </div>
      </div>
      <div
        className="calendar-row"
      >
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            17
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            18
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            19
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            20
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            21
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            22
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            23
          </span>
          <div
            className="day-events"
          />
        </div>
      </div>
      <div
        className="calendar-row"
      >
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            24
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            25
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            26
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            27
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            28
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            29
          </span>
          <div
            className="day-events"
          />
        </div>
        <div
          className="day"
        >
          <span
            className="day-number"
          >
            30
          </span>
          <div
            className="day-events"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Event components render correctly Calendar renders correctly 1`] = `
<div
  className="calendar"
>
  <div>
    <div
      className="calendar-control"
    >
      <div
        className="controls"
      >
        <a
          className="calendar-back"
          href="#"
          onClick={[Function]}
        />
        <span>
          September
        </span>
        <a
          className="calendar-forward"
          href="#"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div>
    <div
      className="calendar-header"
    >
      <span>
        Sunday
      </span>
      <span>
        Monday
      </span>
      <span>
        Tuesday
      </span>
      <span>
        Wednesday
      </span>
      <span>
        Thursday
      </span>
      <span>
        Friday
      </span>
      <span>
        Saturday
      </span>
    </div>
    <div
      className="calendar-row"
    >
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          27
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          28
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          29
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          30
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          31
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          1
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          2
        </span>
        <div
          className="day-events"
        />
      </div>
    </div>
    <div
      className="calendar-row"
    >
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          3
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          4
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          5
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          6
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          7
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          8
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          9
        </span>
        <div
          className="day-events"
        />
      </div>
    </div>
    <div
      className="calendar-row"
    >
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          10
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          11
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          12
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          13
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          14
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          15
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          16
        </span>
        <div
          className="day-events"
        />
      </div>
    </div>
    <div
      className="calendar-row"
    >
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          17
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          18
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          19
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          20
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          21
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          22
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          23
        </span>
        <div
          className="day-events"
        />
      </div>
    </div>
    <div
      className="calendar-row"
    >
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          24
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          25
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          26
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          27
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          28
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          29
        </span>
        <div
          className="day-events"
        />
      </div>
      <div
        className="day"
      >
        <span
          className="day-number"
        >
          30
        </span>
        <div
          className="day-events"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Event components render correctly CalendarControl renders correctly 1`] = `
<div>
  <div
    className="calendar-control"
  >
    <div
      className="controls"
    >
      <a
        className="calendar-back"
        href="#"
        onClick={[Function]}
      />
      <span>
        September
      </span>
      <a
        className="calendar-forward"
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Event components render correctly CalendarDay renders correctly 1`] = `
<div
  className="day"
>
  <span
    className="day-number"
  />
  <div
    className="day-events"
  >
    <a
      className="link neutral-0"
      href="/events/Slug"
    >
      Test Event
    </a>
  </div>
</div>
`;

exports[`Event components render correctly DatePicker renders correctly 1`] = `
<form
  className="row picker-wrap"
  onSubmit={[Function]}
>
  <span
    className="text"
  >
    Search
    <br />
    by date
  </span>
  <div
    className="picker"
  >
    <input
      onChange={[Function]}
      placeholder="--"
      type="text"
      value="09"
    />
     /
    <input
      onChange={[Function]}
      placeholder="--"
      type="text"
      value="26"
    />
     /
    <input
      onChange={[Function]}
      placeholder="--"
      type="text"
      value="2017"
    />
  </div>
  <button
    className="btn btn-sm hollow"
  >
    Find events
  </button>
</form>
`;
